# satcop

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  README.md
.ctags.d/: conf.ctags
etc/: starexec.sh  starexec_run_default
src/: binding.rs  block.rs  builder.rs  cdcl.rs  cee.rs  default_rng.rs  digest.rs  ground.rs  lpo.rs  main.rs  matrix.rs  options.rs  pico.rs  pp.rs  rng.rs  sat.rs  search.rs  sharing.rs  statistics.rs  syntax.rs  tptp.rs  trie.rs  tstp.rs  walk.rs
src/sat/: dpll.rs  mod.rs
src/smt/: dpll.rs  euf.rs  ground.rs  mod.rs
unsolved/: łukasiewicz.p
