[package]
name = "satcop"
version = "0.1.0"
authors = ["Michael Rawson <michael@rawsons.uk>"]
edition = "2018"
description = "an automatic theorem prover for first-order logic"
license = "MIT"

[dependencies]
anyhow = "1"
clap = "3.0.0-beta.2"
fnv = "1"
memmap = "0.7"
num_cpus = "1"
thiserror = "1"
tptp = "0.29"

[dependencies.rand]
version = "0.8"
features = ["small_rng"]